Revision history for Net-ISC-DHCPd

0.09
       - Improved documentation
       - Change $dhcpd->test(...): errstr() can hold the output
         from the dhcpd3 binary, instead of the numeric exit value.

0.0802   Tue Aug  3 08:23:56 CEST 2010
       - Remove html/

0.0801   Mon Aug  2 19:34:37 CEST 2010
       - Fix POD links: L<...>

0.08     Mon Aug  2 14:03:35 CEST 2010
       - Add (RT59816) support for "include ...;"
         generate() can either flatten includes or just print the
         "include" statement. parsing of includes is a manual
         operation.
         Contributor: napetrov
       - Add Function methods to manipulate body
       - Change filehandle is replaced with _filehandle
       - Change attributes holding a file is changed from Str
         to File (from MooseX::Types::Path::Class)
       - Change +attr=>default with builders

0.07     Fri Jun 18 01:30:15 CEST 2010
       - Add (RT58391) OMAPI lookup by hardware_address, even though
         it does not appear to described in the dhcpd manual (?)
         Contributor: Jeff Bair
       - Add (RT58391) post check after OMAPI read() to see if lookup
         attributes match retrieved data. This is because omapi/omshell
         seem to have a bug where lease lookup with "state" is ignored.
         This is subject for change!
         Contributor: Jeff Bair

0.06     Thu Jun 17 20:23:51 CEST 2010
       - Fix version number (didn't know _ made it a dev release)
       - Fix _DEBUG is default off (0)
       - Change OMAPI::Meta::Class is renamed to OMAPI::Sugar
       - Add (RT58391) t/20-omapi.t test which proves (?!) that state() is
         ignored by omapi/omshell.

0.05_02  Fri May 28 23:40:21 CEST 2010
       - Fix RT57947: Minor improvement for Net::ISC::DHCPd::OMAPI:
         "key" not required for localhost
         Contributor: Patrick

0.05_01  Sat Apr 24 16:52:43 CEST 2010
       - Fix RT56775: 10-leases-parse.t fails in non-UTC timezones