@@ -4,6 +4,8 @@ Revision history for Net-ISC-DHCPd
        - Improved documentation
        - Change $dhcpd->test(...): errstr() can hold the output
          from the dhcpd3 binary, instead of the numeric exit value.
+       - Add find_foos() and remove_foos() helper methods for child
+         objects
 
 0.0802   Tue Aug  3 08:23:56 CEST 2010
        - Remove html/
